--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Rummy Knight - Score Tracker</title>
+	<script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.umd.min.js"></script>
 	<style>
 		* {
 			margin: 0;
@@ -355,6 +356,14 @@
 					<div id="gameStats" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 20px; margin-top: 20px;"></div>
 				</div>
 
+				<!-- Score Graph -->
+				<div class="card" style="margin-top: 30px;">
+					<h3>📈 Score Progression</h3>
+					<div style="position: relative; height: 400px; margin-top: 20px;">
+						<canvas id="scoreChart"></canvas>
+					</div>
+				</div>
+
 				<!-- Hands History -->
 				<div class="card" style="margin-top: 30px;">
 					<h3>Hand History</h3>
@@ -385,6 +394,7 @@
 		let currentGame = null;
 		let currentGameId = null;
 		let cachedStats = null;
+		let scoreChart = null;
 
 		// Utility functions
 		function showMessage(message, type = 'success') {
@@ -420,6 +430,10 @@
 		// Clear cached stats when game data changes
 		function clearCachedStats() {
 			cachedStats = null;
+			if (scoreChart) {
+				scoreChart.destroy();
+				scoreChart = null;
+			}
 		}
 
 		function updateInitialDealerSelect() {
@@ -595,6 +609,9 @@
 			// Display player scores
 			displayPlayerScores();
 			
+			// Display score graph
+			displayScoreGraph();
+			
 			// Display game statistics
 			displayGameStats();
 			
@@ -603,6 +620,114 @@
 			
 			// Display hands history
 			displayHandsHistory();
+		}
+
+		function displayScoreGraph() {
+			if (!currentGame || currentGame.hands.length === 0) {
+				const canvas = document.getElementById('scoreChart');
+				if (canvas) {
+					const ctx = canvas.getContext('2d');
+					if (scoreChart) {
+						scoreChart.destroy();
+						scoreChart = null;
+					}
+					// Clear canvas
+					ctx.clearRect(0, 0, canvas.width, canvas.height);
+				}
+				return;
+			}
+
+			// Sort hands by hand number
+			const sortedHands = [...currentGame.hands].sort((a, b) => a.hand_number - b.hand_number);
+
+			// Prepare data for each player
+			const datasets = currentGame.players.map((player, index) => {
+				const colors = [
+					'rgb(102, 126, 234)',   // Blue
+					'rgb(240, 147, 251)',   // Pink
+					'rgb(79, 172, 254)',    // Light Blue
+					'rgb(250, 112, 154)'    // Coral
+				];
+				const color = colors[index % colors.length];
+
+				// Calculate cumulative scores
+				let cumulativeScore = 0;
+				const data = sortedHands.map(hand => {
+					const score = hand.scores.find(s => s.player_id === player.id);
+					if (score) {
+						cumulativeScore += score.score;
+					}
+					return cumulativeScore;
+				});
+
+				return {
+					label: player.name,
+					data: data,
+					borderColor: color,
+					backgroundColor: color.replace('rgb', 'rgba').replace(')', ', 0.1)'),
+					tension: 0.4,
+					fill: false,
+					pointRadius: 4,
+					pointHoverRadius: 6
+				};
+			});
+
+			// Hand numbers for x-axis
+			const labels = sortedHands.map(hand => `Hand ${hand.hand_number}`);
+
+			const ctx = document.getElementById('scoreChart').getContext('2d');
+
+			// Destroy existing chart if it exists
+			if (scoreChart) {
+				scoreChart.destroy();
+			}
+
+			scoreChart = new Chart(ctx, {
+				type: 'line',
+				data: {
+					labels: labels,
+					datasets: datasets
+				},
+				options: {
+					responsive: true,
+					maintainAspectRatio: false,
+					plugins: {
+						legend: {
+							display: true,
+							position: 'top',
+						},
+						tooltip: {
+							mode: 'index',
+							intersect: false,
+						}
+					},
+					scales: {
+						x: {
+							display: true,
+							title: {
+								display: true,
+								text: 'Hand Number'
+							},
+							ticks: {
+								maxRotation: 45,
+								minRotation: 0
+							}
+						},
+						y: {
+							display: true,
+							title: {
+								display: true,
+								text: 'Cumulative Score'
+							}
+						}
+					},
+					interaction: {
+						mode: 'nearest',
+						axis: 'x',
+						intersect: false
+					}
+				}
+			});
 		}
 
 		function displayPlayerScores() {
